1999-04-19  Bob Woodside  <proteus@pcnet.com>

	* fvwm/module.c: New-style variable packet building logic for GSFR -
	used for the M_ADD_WINDOW/M_CONFIGURE_WINDOW packets.
	* fvwm/module.h: Ibid.
	* modules/FvwmPager/FvwmPager.c: Changed to handle the new-style packet,
	and changed all the flags references to their GSFR equivalents.
	* modules/FvwmPager/FvwmPager.h: Ibid.
	* modules/FvwmPager/x_pager.c: Ibid. Also, I termporarily reverted all
	the "Silent" commands to their non-silent versions so the GSFR changes
	can be tested; "Silent" handling seems to be broken at the moment - FVWM
	segfaults whenever Pager sends a Silent command.

1999-04-19  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/events.c (HandleConfigureRequest): 
	* fvwm/icons.c (CreateIconWindow): 
	(DrawIconWindow): 
	* fvwm/misc.c (LowerWindow): 
	(RaiseWindow): make sure icon windows are always restacked
	below their frame.

1999-04-18  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm.h (window_flags): new flags is_icon_entered 
	for tracking enter and leave events on iconified windows.
	* fvwm/gsfr.h (IS_ICON_ENTERED): 
	(SET_ICON_ENTERED): 
	(SETM_ICONIFIED_BY_PARENT): new macros to set is_icon_entered.
	* fvwm/icons.c (DrawIconWindow): change the logic of
	DrawIconWindow to show the full icon title and raise it iff
	the pointer is over the icon.
	* fvwm/events.c (HandleEnterNotify):  
	(HandleLeaveNotify): maintain is_icon_entered and redraw the icon.
	* NEWS: mention the new icon behaviour.
	
1999-04-18  Bob Woodside  <proteus@pcnet.com>

	* fvwm/vpacket.h: new file - this should contain structure descriptions
	for any new-style module packets (post-GSFR) using the new, variable-
	length argument packet sending logic. Initially it only contains the new
	M_CONFIGURE_WINDOW/M_ADD_WINDOW packet.

	* fvwm/virtual.c: changeDesks: fixed segfault caused by use of a NULL
	FocusWin pointer.

1999-04-18  Dominik Vogt  <dominik_vogt@gmx.de>
